fixed course apis
